--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "express-prototype",
   "description": "GOVUK prototyping app in Express",
-  "version": "8.4.0",
+  "version": "8.6.0",
   "private": true,
   "engines": {
     "node": "^8.9.1"
@@ -9,9 +9,11 @@
   "scripts": {
     "start": "node start.js",
     "lint": "standard",
-    "test": "gulp test && npm run lint"
+    "test": "npm run lint && gulp generate-assets && jest"
   },
   "dependencies": {
+    "acorn": "^6.0.5",
+    "ansi-colors": "^3.2.3",
     "basic-auth": "^2.0.0",
     "basic-auth-connect": "^1.0.0",
     "body-parser": "^1.14.1",
@@ -20,21 +22,20 @@
     "cookie-parser": "^1.4.3",
     "cross-spawn": "^6.0.5",
     "dateformat": "^3.0.3",
+    "del": "^3.0.0",
     "dotenv": "^6.0.0",
     "express": "4.16.3",
     "express-session": "^1.13.0",
     "express-writer": "0.0.4",
+    "fancy-log": "^1.3.3",
     "govuk-elements-sass": "^3.1.3",
-    "govuk-frontend": "^2.4.0",
+    "govuk-frontend": "^2.6.0",
     "govuk_frontend_toolkit": "^7.5.0",
     "govuk_template_jinja": "^0.24.1",
-    "gulp": "^3.9.1",
-    "gulp-clean": "^0.4.0",
-    "gulp-mocha": "^6.0.0",
+    "gulp": "^4.0.0",
     "gulp-nodemon": "^2.1.0",
     "gulp-sass": "^4.0.1",
     "gulp-sourcemaps": "^2.6.0",
-    "gulp-util": "^3.0.7",
     "keypather": "^3.0.0",
     "marked": "^0.4.0",
     "notifications-node-client": "^4.1.0",
@@ -42,7 +43,6 @@
     "portscanner": "^2.1.1",
     "prompt": "^1.0.0",
     "require-dir": "^1.0.0",
-    "run-sequence": "^2.2.1",
     "sharp": "^0.21.1",
     "simplemde": "^1.11.2",
     "sync-request": "^6.0.0",
@@ -56,7 +56,8 @@
     ]
   },
   "devDependencies": {
-    "standard": "^11.0.1",
+    "jest": "^23.6.0",
+    "standard": "^12.0.1",
     "supertest": "^3.0.0"
   }
 }
